# pumex

./: .gitignore  CMakeLists.txt  LICENSE  README.md
android/: build.gradle  settings.gradle
android/pumexcrowd/: AndroidManifest.xml  build.gradle
android/pumexdeferred/: AndroidManifest.xml  build.gradle
android/pumexgpucull/: AndroidManifest.xml  build.gradle
android/pumexviewer/: AndroidManifest.xml  build.gradle
cmake/: pumex-config.cmake  pumex_externals.cmake  pumex_macros.cmake
data/: crowd_filter_instances.comp  crowd_instanced_animation.vert  crowd_simple_animation.vert  deferred_composite.frag  deferred_composite.vert  deferred_gbuffers.frag  deferred_gbuffers.vert  gpucull_dynamic_filter_instances.comp  gpucull_dynamic_render.vert  gpucull_static_filter_instances.comp  gpucull_static_render.vert  text_draw.frag  text_draw.geom  text_draw.vert  viewer_basic.frag  viewer_basic.vert  wmale1_bbox.dae  wmale1_cloth1.dae  wmale1_cloth2.dae  wmale1_cloth3.dae  wmale1_lod1.dae  wmale1_lod2.dae  wmale1_run.dae  wmale1_walk.dae  wmale1_walk_easy.dae  wmale2_cloth1.dae  wmale2_cloth2.dae  wmale2_cloth3.dae  wmale2_lod1.dae  wmale2_lod2.dae  wmale3_cloth1.dae  wmale3_cloth2.dae  wmale3_cloth3.dae  wmale3_lod0.dae  wmale3_lod1.dae  wmale3_lod2.dae
data/ibl/: SciFiHelmet.gltf  copyright.txt  syferfontein_0d_clear_2k.ktx
data/people/: M_Suit_01.dds  M_Suit_01_mobi.ktx  M_Swimming_trunks_01_mobi.ktx  M_Swimming_trunks_02.dds  M_Swimming_trunks_02_mobi.ktx  blue_eye_mobi.ktx  brown_eye_mobi.ktx  deepblue_eye_mobi.ktx  dragon_female_white.dds  dragon_female_white_mobi.ktx  green.dds  green_eye.dds  green_eye_mobi.ktx  green_mobi.ktx  license.txt  male_casualsuit01_diffuse.dds  male_casualsuit01_diffuse_mobi.ktx  male_elegantsuit01_diffuse.dds  male_elegantsuit01_diffuse_mobi.ktx  male_worksuit01_diffuse_mobi.ktx  middleage_lightskinned_male_diffuse.dds  middleage_lightskinned_male_diffuse_1_mobi.ktx  middleage_lightskinned_male_diffuse_mobi.ktx  ork_texture_mobi.ktx  wmale1_bbox.dae  wmale1_cloth1.dae  wmale1_cloth2.dae  wmale1_cloth3.dae  wmale1_lod1.dae  wmale1_lod2.dae  wmale1_run.dae  wmale1_walk.dae  wmale1_walk_big_steps.dae  wmale1_walk_easy.dae  wmale2_cloth1.dae  wmale2_cloth2.dae  wmale2_cloth3.dae  wmale2_lod1.dae  wmale2_lod2.dae  wmale3_cloth1.dae  (+13 more)
data/shaders/: crowd_instanced_animation.frag  crowd_instanced_animation.vert  crowd_simple_animation.frag  crowd_simple_animation.vert  deferred_composite.frag  deferred_composite.vert  deferred_gbuffers.frag  deferred_gbuffers.vert  gpucull_dynamic_filter_instances.comp  gpucull_dynamic_render.frag  gpucull_dynamic_render.vert  gpucull_static_filter_instances.comp  gpucull_static_render.frag  gpucull_static_render.vert  multiview_composite.frag  multiview_composite.vert  multiview_display.frag  multiview_display.vert  multiview_gbuffers.frag  multiview_gbuffers.vert  text_draw.frag  text_draw.geom  viewer_basic.frag  viewer_basic.vert  voxelizer_basic.frag  voxelizer_basic.vert  voxelizer_raymarch.frag  voxelizer_raymarch.vert  voxelizer_voxelize.frag  voxelizer_voxelize.geom  voxelizer_voxelize.vert
data/sponza/: background_diff.dds  background_diff_mobi.ktx  background_norm.dds  background_norm_mobi.ktx  background_rough.dds  background_rough_mobi.ktx  chain_texture_diff.dds  chain_texture_diff_mobi.ktx  chain_texture_metal.dds  chain_texture_metal_mobi.ktx  chain_texture_norm.dds  chain_texture_norm_mobi.ktx  chain_texture_rough.dds  chain_texture_rough_mobi.ktx  copyright.txt  dielectric_metal_mobi.ktx  flat_norm.dds  lion_diff.dds  lion_diff_mobi.ktx  lion_norm.dds  lion_norm_mobi.ktx  lion_rough.dds  lion_rough_mobi.ktx  metallic_metal.dds  metallic_metal_mobi.ktx  spnza_bricks_a_norm.dds  spnza_bricks_a_spec.dds  sponza_arch_diff.dds  sponza_arch_diff_mobi.ktx  sponza_arch_norm.dds  sponza_arch_rough.dds  (+121 more)
doc/: asset.md  buffers_images.md  class_description.md  render_loop.md  tutorial.md  update_render_coop.md
examples/: CMakeLists.txt
examples/pumexcrowd/: CMakeLists.txt  pumexcrowd.cpp
examples/pumexcrowd/shaders/: crowd_filter_instances.comp  crowd_instanced_animation.frag  crowd_instanced_animation.vert
examples/pumexdeferred/: CMakeLists.txt  pumexdeferred.cpp
examples/pumexdeferred/shaders/: deferred_buildz.frag  deferred_buildz.vert  deferred_composite.frag  deferred_gbuffers.frag  deferred_gbuffers.vert
examples/pumexgpucull/: CMakeLists.txt  pumexgpucull.cpp
examples/pumexgpucull/shaders/: gpucull_dynamic_filter_instances.comp  gpucull_dynamic_render.frag  gpucull_dynamic_render.vert  gpucull_static_filter_instances.comp  gpucull_static_render.frag  gpucull_static_render.vert
examples/pumexibl/: CMakeLists.txt  pumexibl.cpp
examples/pumexibl/shaders/: ibl_background.frag  ibl_background.vert  ibl_calculate_brdf.frag  ibl_calculate_brdf.vert  ibl_calculate_diffuse_irradiance.frag  ibl_calculate_prefiltered_environment.frag  ibl_calculate_prefiltered_environment.vert  ibl_equirectangular_to_cubemap.frag  ibl_equirectangular_to_cubemap.vert  ibl_render.frag  ibl_render.vert
examples/pumexmultiview/: CMakeLists.txt  pumexmultiview.cpp
examples/pumexmultiview/shaders/: multiview_composite.frag  multiview_composite.vert  multiview_display.frag  multiview_display.vert  multiview_gbuffers.frag  multiview_gbuffers.vert
examples/pumexviewer/: CMakeLists.txt  pumexviewer.cpp
examples/pumexviewer/shaders/: viewer_basic.frag  viewer_basic.vert
examples/pumexviewerqt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  pumexviewerqt.cpp
examples/pumexviewerqt/shaders/: viewerqt_basic.frag  viewerqt_basic.vert
examples/pumexvoxelizer/: CMakeLists.txt  pumexvoxelizer.cpp
examples/pumexvoxelizer/shaders/: voxelizer_basic.frag  voxelizer_basic.vert  voxelizer_raymarch.frag  voxelizer_raymarch.vert  voxelizer_voxelize.frag  voxelizer_voxelize.geom  voxelizer_voxelize.vert
shaders/: stat_draw.frag  stat_draw.vert  text_draw.frag  text_draw.geom  text_draw.vert
src/: crowd.cpp  pumexcrowd.cpp  pumexdeferred.cpp  pumexgpucull.cpp  pumexmultiview.cpp  pumexviewer.cpp  pumexvoxelizer.cpp
(+165 files in other folders)
