add_subdirectory( pumexviewer )
add_subdirectory( pumexgpucull )
if( NOT ANDROID )
  add_subdirectory( pumexcrowd )
  add_subdirectory( pumexdeferred )
  add_subdirectory( pumexvoxelizer )
  add_subdirectory( pumexmultiview )
  add_subdirectory( pumexibl )
endif()
if(PUMEX_BUILD_QT AND NOT ANDROID)
  add_subdirectory( pumexviewerqt )
endif()

set_property(DIRECTORY ${PROJECT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT pumexcrowd)
