add_subdirectory( pumexviewer )
add_subdirectory( pumexcrowd )
add_subdirectory( pumexgpucull )
add_subdirectory( pumexdeferred )
if( NOT ANDROID )
  add_subdirectory( pumexibl )
  add_subdirectory( pumexvoxelizer )
  add_subdirectory( pumexmultiview )
endif()
if(PUMEX_BUILD_QT AND NOT ANDROID)
  add_subdirectory( pumexviewerqt )
endif()

set_property(DIRECTORY ${PROJECT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT pumexcrowd)
